--- a/Optimization/CMakeLists.txt
+++ b/Optimization/CMakeLists.txt
@@ -2,6 +2,7 @@ find_package(Ceres CONFIG REQUIRED)
 find_package(TBB CONFIG REQUIRED)
 
 find_package(PkgConfig REQUIRED)
+find_package(OpenMP)
 
 list(APPEND CMAKE_PREFIX_PATH /home/janos/libraries/prefix/)
 set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH ON)
@@ -11,20 +12,21 @@ pkg_check_modules(Adolc REQUIRED IMPORTED_TARGET adolc)
 set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 
 add_library(Optimization STATIC
-        #Functional.h
-        #Functional.cpp
-        #LossFunction.cpp
-        #LossFunctions.h
-        #Solver.cpp
-        #Solver.h
-        #Optimization.h
-        #Functional.hpp
-        #Tag.h
-        #Tag.cpp
-        #RecursiveProblem.h
-        #RecursiveProblem.cpp
+        Functional.h
+        Functional.hpp
+        Functional.cpp
+        LossFunction.cpp
+        LossFunctions.h
+        Solver.cpp
+        Solver.h
+        Optimization.h
+        Tag.h
+        Tag.cpp
+        RecursiveProblem.h
+        RecursiveProblem.cpp
         Tree.h
-        Tree.cpp)
+        Tree.cpp
+        )
 
 target_include_directories(Optimization PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
@@ -35,11 +37,13 @@ target_link_libraries(Optimization PRIVATE
         TBB::tbb
         ScopedTimer::ScopedTimer
         ImGui::ImGui
+        OpenMP::OpenMP_CXX
         )
 
 target_link_libraries(Optimization PUBLIC
         PkgConfig::Adolc
         Phasefield::Mesh
+        Phasefield::VisualizationProxy
         Corrade::Containers
         )
 
