--- a/Visualization/CMakeLists.txt
+++ b/Visualization/CMakeLists.txt
@@ -5,8 +5,9 @@ add_library(Visualization STATIC
         Upload.h
         primitive_options.hpp
         primitive_options.cpp
-        custom_widgets.hpp
-        custom_widgets.cpp
+        ImGuiWidgets.h
+        ImGuiWidget.cpp
+        Visualization.h
         )
 target_include_directories(Visualization PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 target_link_libraries(Visualization
@@ -25,8 +26,8 @@ add_library(Phasefield::Visualization ALIAS Visualization)
 
 
 add_library(VisualizationProxy STATIC
-        #VisualizationProxy.cpp
-        #VisualizationProxy.h
+        VisualizationProxy.cpp
+        VisualizationProxy.h
         )
 
 target_include_directories(VisualizationProxy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
