connectedness add options to only use 2 cc and check gradients using ad

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ project(Phasefield)
 set(CMAKE_CXX_STANDARD 20)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
+#list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_CXX_FLAGS_RELEASE "-ffast-math")
 
 find_package(Eigen3 CONFIG REQUIRED)
 find_package(Corrade CONFIG REQUIRED PluginManager Containers TestSuite)
@@ -15,7 +16,7 @@ find_package(MagnumPlugins CONFIG REQUIRED AssimpImporter)
 find_package(MagnumIntegration CONFIG REQUIRED ImGui Eigen)
 find_package(ImGui REQUIRED COMPONENTS SourcesMiscCpp)
 find_package(TBB CONFIG REQUIRED)
-find_package(ipopt REQUIRED)
+#find_package(ipopt REQUIRED)
 
 #set_compile_options("-Wno-old-style-cast")
 #list(INSERT CMAKE_CXX_FLAGS 0 "-Wno-old-style-cast")
@@ -41,4 +42,5 @@ add_subdirectory(Viewer)
 add_executable(Phasefield main.cpp)
 
 target_link_libraries(Phasefield PRIVATE Phasefield::Viewer)
+#set_property(TARGET Phasefield PROPERTY INTERPROCEDURAL_OPTIMIZATION True)
 #add_subdirectory(tests)
