first shape opt experiments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,12 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
 #list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/conan_modules)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-set(CMAKE_CXX_FLAGS_RELEASE "-ffast-math")
 
 find_package(Eigen3 CONFIG REQUIRED)
 find_package(Corrade CONFIG REQUIRED PluginManager Containers TestSuite)
 find_package(Magnum CONFIG REQUIRED GL SceneGraph MeshTools Sdl2Application Shaders Primitives DebugTools)
 find_package(MagnumPlugins CONFIG REQUIRED AssimpImporter PrimitiveImporter)
-find_package(MagnumIntegration CONFIG REQUIRED ImGui Eigen)
+find_package(MagnumIntegration CONFIG REQUIRED ImGui)
 find_package(ImGui REQUIRED COMPONENTS SourcesMiscCpp)
 find_package(TBB CONFIG REQUIRED)
 #find_package(ipopt REQUIRED)
