--- a/Viewer/CMakeLists.txt
+++ b/Viewer/CMakeLists.txt
@@ -1,5 +1,4 @@
 corrade_add_resource(Viewer_RESOURCES resources.conf)
-
 add_library(Viewer STATIC
         Viewer.cpp
         Viewer.h
@@ -7,9 +6,12 @@ add_library(Viewer STATIC
         ArcBall.h
         KDTree.h
         KDTree.cpp
+        DepthReinterpretShader.cpp
+        DepthReinterpretShader.h
         ${viewer_RESOURCES})
 
 target_include_directories(Viewer PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+
 target_link_libraries(Viewer
         PUBLIC
             Phasefield::Utilities
@@ -18,22 +20,26 @@ target_link_libraries(Viewer
             Phasefield::Optimization
             Phasefield::Visualization
             Phasefield::VisualizationProxy
-            Phasefield::VideoSaver
 
             Magnum::GL
-            Magnum::SceneGraph
             Magnum::Magnum
             Magnum::MeshTools
-            Magnum::SceneGraph
             Magnum::Application
             Magnum::Shaders
             Magnum::DebugTools
-            MagnumIntegration::ImGui
             MagnumPlugins::PrimitiveImporter
+            MagnumIntegration::ImGui
+            ImPlot::ImPlot
+            FastBVH::FastBVH
         )
 
 add_library(Phasefield::Viewer ALIAS Viewer)
 
-if (NOT CORRADE_TARGET_EMSCRIPTEN)
-    target_link_libraries(Viewer PUBLIC MagnumPlugins::AssimpImporter)
+if (PHASEFIELD_WITH_ASSIMP)
+    target_link_libraries(Viewer PUBLIC  MagnumPlugins::AssimpImporter)
+    target_compile_definitions(Viewer PUBLIC PHASEFIELD_WITH_ASSIMP)
 endif ()
+
+if (PHASEFIELD_WITH_FFMPEG)
+    target_link_libraries(Viewer PUBLIC Phasefield::VideoSaver)
+endif()
