--- a/Viewer/resources.conf
+++ b/Viewer/resources.conf
@@ -1,4 +1,10 @@
-group=fonts
+group=data
 
 [file]
 filename=SourceSansPro-Regular.ttf
+
+[file]
+filename=DepthReinterpretShader.frag
+
+[file]
+filename=DepthReinterpretShader.vert
