--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(Corrade REQUIRED Containers Utility)
 if (PHASEFIELD_WITH_ASSIMP)
     set(WITH_ANYIMAGEIMPORTER ON CACHE BOOL "" FORCE)
     set(WITH_ASSIMPIMPORTER ON CACHE BOOL "" FORCE)
+    set(WITH_STANFORDSCENECONVERTER ON CACHE BOOL "" FORCE)
 endif ()
 
 if (CORRADE_TARGET_EMSCRIPTEN)
