--- a/Viewer/resources.conf
+++ b/Viewer/resources.conf
@@ -1,10 +1,5 @@
-group=data
+group=viewer-data
 
 [file]
 filename=SourceSansPro-Regular.ttf
 
-[file]
-filename=DepthReinterpretShader.frag
-
-[file]
-filename=DepthReinterpretShader.vert
