--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ project(Phasefield)
 
 cmake_policy(SET CMP0077 NEW)
 
+set(MKL_ROOT /opt/intel/mkl)
+set(MKL_PARALLEL ON)
+set(MKL_64BIT ON)
+
 set(CMAKE_CXX_STANDARD 20)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/modules)
@@ -19,6 +23,7 @@ option(PHASEFIELD_WITH_IO "Import with assimp, export with vtk to vts (paraview)
 
 add_subdirectory(contrib)
 
+find_package(MKL)
 find_package(PkgConfig REQUIRED)
 find_package(Eigen3)
 find_package(Corrade)
