--- a/Cost/CMakeLists.txt
+++ b/Cost/CMakeLists.txt
@@ -1,5 +1,24 @@
 set_directory_properties(PROPERTIES CORRADE_USE_PEDANTIC_FLAGS ON)
 
+set(CUDA_TOOLKIT_ROOT_DIR /opt/cuda)
+set(CMAKE_CUDA_COMPILER /opt/cuda/bin/nvcc)
+enable_language(CUDA)
+add_library(CudaSolver
+        CudaSolver.cpp
+        CudaSolver.h
+        CuSparse/cusparse_cholesky_solver.cpp
+        CuSparse/cusparse_cholesky_solver.h
+        CuSparse/cusparse_wrapper.cpp
+        CuSparse/cusparse_wrapper.h
+        )
+
+find_package(OpenMP)
+find_package(CUDAToolkit)
+
+target_link_libraries(CudaSolver PUBLIC Eigen3::Eigen CUDA::cusparse CUDA::cusolver CUDA::cudart)
+add_library(Phasefield::CudaSolver ALIAS CudaSolver)
+
+
 add_library(Cost STATIC
         Cost.h
         ModicaMortola.cpp
@@ -7,6 +26,8 @@ add_library(Cost STATIC
         ConnectednessConstraint.h
         ConnectednessConstraint.cpp
         #StrangRules.hpp
+        CudaSolver.cpp
+        CudaSolver.h
         StoppingCriteria.cpp
         StoppingCriteria.h
         UnionFind.cpp
@@ -32,6 +53,8 @@ target_link_libraries(Cost PUBLIC
         Phasefield::VisualizationProxy
         Phasefield::Mesh
         Phasefield::Optimization
+        Phasefield::CudaSolver
+        OpenMP::OpenMP_CXX
         )
 
 set_property(TARGET Cost PROPERTY POSITION_INDEPENDENT_CODE ON)
