correct directory for initializing submodules

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Dependencies
       shell: bash
-      working-directory: ${{runner.workspace}}
+      working-directory: $GITHUB_WORKSPACE
       run: git submodule update --init --recursive
       
     - name: Create Build Environment
