--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -1,13 +1,20 @@
+# GLFW
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+add_subdirectory(glfw EXCLUDE_FROM_ALL)
 
+# Corrade
 set(BUILD_PLUGINS_STATIC ON CACHE BOOL "" FORCE)
 set(BUILD_STATIC ON CACHE BOOL "" FORCE)
-
 set(WITH_CONTAINERS ON CACHE BOOL "" FORCE)
 set(WITH_UTILITY ON CACHE BOOL "" FORCE)
 
 add_subdirectory(corrade EXCLUDE_FROM_ALL)
-find_package(Corrade REQUIRED Containers Utility)
+find_package(Corrade) # bring in CORRADE_TARGET_* macros
 
+# Magnum + Magnum-Plugins (Assimp)
 if (PHASEFIELD_WITH_IO)
     set(WITH_ANYIMAGEIMPORTER ON CACHE BOOL "" FORCE)
     set(WITH_ASSIMPIMPORTER ON CACHE BOOL "" FORCE)
@@ -19,28 +26,36 @@ set(WITH_STANFORDIMPORTER ON CACHE BOOL "" FORCE)
 if (CORRADE_TARGET_EMSCRIPTEN)
     set(WITH_EMSCRIPTENAPPLICATION ON CACHE BOOL "" FORCE)
 else()
-    set(WITH_SDL2APPLICATION ON CACHE BOOL "" FORCE)
+    set(WITH_GLFWAPPLICATION ON CACHE BOOL "" FORCE)
 endif ()
 
 add_subdirectory(magnum EXCLUDE_FROM_ALL)
-find_package(Magnum REQUIRED GL MeshTools Primitives Shaders Trade DebugTools)
-
 add_subdirectory(magnum-plugins EXCLUDE_FROM_ALL)
 
-set(IMGUI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/imgui)
+# Magnum-Integration
+set(IMGUI_DIR "${CMAKE_CURRENT_SOURCE_DIR}/imgui")
 set(WITH_IMGUI ON CACHE BOOL "" FORCE)
-
 add_subdirectory(magnum-integration EXCLUDE_FROM_ALL)
 find_package(MagnumIntegration REQUIRED ImGui)
 
+# ImPlot
 add_library(implot implot/implot.h implot/implot_internal.h implot/implot.cpp implot/implot_items.cpp)
 target_include_directories(implot PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/implot)
 target_link_libraries(implot PUBLIC MagnumIntegration::ImGui)
 add_library(ImPlot::ImPlot ALIAS implot)
 
-add_subdirectory(liblbfgs)
+# lbfgs
+add_subdirectory(liblbfgs EXCLUDE_FROM_ALL)
 
-add_subdirectory(bvh)
+# Bounding Volume Hierarchy
+add_subdirectory(bvh EXCLUDE_FROM_ALL)
 
-add_subdirectory(eigen)
+# Eigen
+set(EIGEN_BUILD_DOC OFF CACHE BOOL "" FORCE)
+set(EIGEN_BUILD_PKGCONFIG OFF CACHE BOOL "" FORCE)
+set(EIGEN_BUILD_BTL OFF CACHE BOOL "" FORCE)
+set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
+add_subdirectory(eigen EXCLUDE_FROM_ALL)
+
+
 
